--- a/cmake/custom_pugixml_download.in
+++ b/cmake/custom_pugixml_download.in
@@ -5,7 +5,7 @@ project(pugixml-download NONE)
 include(ExternalProject)
 ExternalProject_Add(pugixml
 	GIT_REPOSITORY    https://github.com/zeux/pugixml
-	GIT_TAG           "v1.11.3"
+	GIT_TAG           "${PUGIXML_VERSION_TAG}"
 	GIT_SHALLOW       TRUE
 	SOURCE_DIR        "${CMAKE_BINARY_DIR}/pugixml-src"
 	CONFIGURE_COMMAND ""
